# vinezombie

./: .build.yml  .clippy.toml  .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md
.builds/: quality.yml  test.yml
.github/workflows/: ci.yml
dia/: strings.d2
doc/: README.md  lib-rs.md  rustdoc.md  string1-rs.md  string2-rs.md  strings-rs.d2  strings.d2
doc/rustdoc/: client.md  client.md.bak  ircmsg.md  lib.md  string1.md  string2.md  strings.d2
examples/: hello_libera.rs  hello_libera_tokio.rs  msglog.rs  reconnect.rs  sasl.rs
src/: auth.rs  client.rs  config.rs  consts.rs  error.rs  handlers.rs  init.rs  io.rs  ircmsg.rs  known.rs  lib.rs  macros.rs  msg.rs  names.rs  owning.rs  sasl.rs  source.rs  state.rs  string.rs  translators.rs  update.rs  util.rs
src/client/: auth.rs  cap.rs  conn.rs  handler.rs  handlers.rs  logic.rs  nick.rs  queue.rs  register.rs  sink.rs  state.rs  tls.rs
src/client/auth/: handler.rs  sasl.rs  secret.rs  tests.rs
src/client/auth/sasl/: external.rs  password.rs
src/client/conn/: sync.rs  time.rs  tokio.rs
src/client/handler/: channel.rs  delay.rs  run.rs
src/client/handler/channel/: oneshot.rs  parker.rs  tests.rs
src/client/handlers/: autoreply.rs  ping.rs  track.rs
src/client/nick/: suffix.rs  tests.rs
src/client/queue/: adjuster.rs
src/client/register/: defaults.rs  fallbacks.rs  handler.rs  tests.rs
src/config/: register.rs  server.rs
src/consts/: cap.rs  cmd.rs  isupport.rs  types.rs
src/handlers/: init.rs
src/init/: nick.rs  opts.rs
src/ircmsg/: args.rs  client.rs  codec.rs  common.rs  ctcp.rs  numeric.rs  server.rs  servermsgkind.rs  source.rs  tags.rs  targeted.rs  tests.rs
src/known/: cmd.rs
src/msg/: args.rs  client.rs  server.rs  tests.rs
src/names/: cap.rs  cmd.rs  isupport.rs  types.rs
src/state/: mode.rs  serverinfo.rs  tests.rs
src/state/serverinfo/: tests.rs  value.rs
src/string/: base64.rs  builder.rs  bytes.rs  ircstr.rs  ircword.rs  secretbuf.rs  serde.rs  splitter.rs  strmap.rs  subtypes.rs  tests.rs  tf.rs
src/string/subtypes/: builders.rs  impls.rs  macros.rs  tests.rs
src/string/tf/: casemap.rs  escape.rs  parse.rs  tests.rs  trim.rs
src/util/: dynsized.rs  flatmap.rs  hash.rs  ownedslice.rs  tests.rs  thinarc.rs
