[package]
name = "vinezombie"
version = "0.1.0"
edition = "2021"

license = "GPL-3.0-only"
description = "A modular IRCv3 library"
repository = "https://github.com/vinezombie/vinezombie"
readme = "README.md"
keywords = ["irc", "ircv3"]
categories = ["network-programming", "parser-implementations"]

# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.21.2", optional = true }
rustls = { version = "0.21.2", optional = true, features = ["dangerous_configuration"] }
rustls-native-certs = { version = "0.6.3", optional = true }
rustls-pemfile = { version = "1.0.2", optional = true }
serde = { version = "1.0.164", features = ["derive", "rc"], optional = true }
tokio = { version = "1.28.2", features = ["io-util", "net", "time"], optional = true }
tokio-rustls = { version = "0.24.1", optional = true }
tracing = { version = "0.1.37", optional = true }
whoami = { version = "1.3.0", optional = true }
zeroize = { version = "1.6.0", optional = true }

[features]
default = ["base64", "client", "tls-tokio"]
client = []
tls = ["dep:rustls", "dep:rustls-native-certs", "dep:rustls-pemfile"]
tls-tokio = ["dep:tokio-rustls", "tls", "tokio"]

[dev-dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_unstable"]
