[package]
name = "vinezombie"
version = "0.2.0"
edition = "2021"
rust-version = "1.70.0"

license = "GPL-3.0-only"
description = "A modular IRCv3 framework"
homepage = "https://github.com/vinezombie/vinezombie"
repository = "https://github.com/vinezombie/vinezombie"
readme = "README.md"
keywords = ["irc", "ircv3"]
categories = ["network-programming", "parser-implementations"]
include = ["/src", "/doc/rustdoc/*", "/README.md"]

# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.21.2", optional = true }
rustls = { version = "0.21.4", optional = true, features = ["dangerous_configuration"] }
rustls-native-certs = { version = "0.6.3", optional = true }
rustls-pemfile = { version = "1.0.2", optional = true }
serde = { version = "1.0", features = ["rc"], optional = true }
serde_derive = { version = ">= 1.0.184", optional = true }
tokio = { version = "1.28.2", features = ["io-util", "net", "time", "rt", "sync"], optional = true }
tokio-rustls = { version = "0.24.1", optional = true }
tracing = { version = "0.1.37", default-features = false, features = ["std"], optional = true }
whoami = { version = "1.5.0", optional = true }
zeroize = { version = "1.6.0", optional = true }

[features]
default = ["base64", "client", "tls-tokio"]
client = []
serde = ["dep:serde", "dep:serde_derive"]
tls = ["dep:rustls", "dep:rustls-native-certs", "dep:rustls-pemfile"]
tls-tokio = ["dep:tokio-rustls", "tls", "tokio"]

[dev-dependencies]
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_unstable"]
