[package]
name = "vinezombie"
version = "0.3.0"
edition = "2021"
rust-version = "1.70.0"

license = "EUPL-1.2"
description = "A modular IRCv3 framework"
homepage = "https://github.com/vinezombie/vinezombie"
repository = "https://github.com/vinezombie/vinezombie"
readme = "README.md"
keywords = ["irc", "ircv3"]
categories = ["network-programming", "parser-implementations"]
include = ["/src", "/doc/rustdoc/*", "/README.md"]

# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.21.2", optional = true }
ring = { version = "0.17.8", optional = true }
rustls = { version = "0.23.5", optional = true, default-features = false, features = ["std", "tls12"] }
rustls-native-certs = { version = "0.7.0", optional = true }
rustls-pemfile = { version = "2.1.2", optional = true }
serde = { version = "1.0", features = ["rc"], optional = true }
serde_derive = { version = ">= 1.0.184", optional = true }
tokio = { version = "1.28.2", features = ["io-util", "net", "time", "rt", "sync"], optional = true }
tokio-rustls = { version = "0.26.0", optional = true, default-features = false }
tokio-util = { version = "0.7.10", optional = true, default-features = false }
tracing = { version = "0.1.37", default-features = false, features = ["std"], optional = true }
whoami = { version = "1.5.0", optional = true }

[features]
default = ["base64", "client", "crypto", "tls-tokio"]
client = []
crypto = ["dep:ring", "rustls?/ring"]
serde = ["dep:serde", "dep:serde_derive"]
tls = ["dep:rustls", "dep:rustls-native-certs", "dep:rustls-pemfile"]
tls-tokio = ["dep:tokio-rustls", "tls", "tokio"]
tokio-codec = ["tokio-util/codec"]

[dev-dependencies]
serde_json = "1.0.116"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_unstable"]
